--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>line selfie</title>
+    <title>rapid mirror</title>
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
